    - ListBox removes itself from its ListData object when deleted.
    - Keyboard example shows cursor.
    - Moved DimmedScreen into woopsi folder as an official gadget.
    - CycleButton::getPreferredDimensions() populates rect with correct values.
  
  - New Features:
    - TextBox and MultiLineTextBox cursor moves when d-pad left/right are
      pressed and gadget has focus.
  

  V0.38 (20090428)
  
  - Fixes:
     - Removed PALib dependency from filerequester example.
     - FileRequester gadget fixed for devKitARM r24 (Quirky).
     - ListBox redraws correctly when an option is selected in single selection
       mode.
     - Fixed crash in SliderVertical when trying to set value if max and min
       values are the same (Quirky).
     - Fixed crash in SliderHorizontal when trying to set value if max and min
       values are the same.
     - Fixed FileRequester crash when path has trailing slash (Quirky).
     - Fixed double-click in SDL (Quirky).
     - FileRequester fixed for SDL (Quirky).
     - SDL path fixes (Quirky).
	 - Escape key to quit in SDL mode (Quirky).
     - WindowBorderTop and SkinnedWindowBorderTop no longer have pointers to
       freed memory if window title changes (Quirky).
     - ScreenTitle and SkinnedScreenTitle no longer have pointers to freed
       memory if screen title changes (Quirky).
     - Flipping window depth with depth gadget no longer results in corrupted
       window contents.
     - Fixed const-correctness of various Text class methods.
     - SDL framebuffers initialised to black.
     - More doxygen fixes.
     - Removed WoopsiArray::begin().
     - Removed LinkedList::begin().
     - Renamed Gadget::draw() to Gadget::redraw() and removed unnecessary
       overloads from all classes.
     - Const correctness fixes in Gadget class.
     - ScrollingTextbox adjusts scrollbar grip position correctly when first
       initialised.
     - Alert box draws XOR rect correctly when released.