@@ -1,0 +1,14 @@
+#ifndef _CYCLE_TEST_H_
+#define _CYCLE_TEST_H_
+
+#include "woopsi.h"
+
+using namespace WoopsiUI;
+
+class CycleTest : public Woopsi {
+public:
+	void startup();
+	void shutdown();
+};
+
+#endif
