@@ -1,0 +1,6 @@
+#include "cycletest.h"
+
+int main(int argc, char* argv[]) {
+	CycleTest app;
+	return app.main(argc, argv);
+}
